# Server-SSH

./: .data.txt  .databaseexample.txt  CMakeLists.txt  README.md  TCP_client.c  TCP_server.c  UDP_client.c  UDP_server.c  help.txt  server.c  test.c  test_c  test_c.c  test_s  test_s.c  todo.txt
client/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
client/headers/: client.h
client/src/: broadcast.c  client.c  client_broadcast.c  command.c  connect.c  connection.c  encrypting.c  inicialisation_inet.c  log.c  main.c  message.c
old_src/: client.h  server.h
old_src/src_client/: broadcast.c  client.c  connection.c  encrypting.c  main.c  message.c
old_src/src_server/: additionals_to_admins.c  administraitors.c  broadcast.c  connection_handler.c  log.c  main.c  tasks.c
server/: CMakeLists.txt  CmakeLists.txt
server/headers/: server.h
server/src/: Signals_operations.c  additionals_to_admins.c  admin_UDP.c  administraitor.c  administraitors.c  broadcast.c  connection_handler.c  do_usual.c  encrypting.c  main.c  message.c  server.c  tasks.c  users.c
